--- a/index.html
+++ b/index.html
@@ -72,36 +72,36 @@
 
         <ul>
             <dt>
-                <p><a target="_self" href="https://eneskarali.github.io/automataLab/TermProject/">PDA Visualization</a></p>
+                <p><a target="_self" href="https://eneskarali.github.io/automata/TermProject/">PDA Visualization</a></p>
             </dt>
         </ul>
         <h2 style="color: rgb(11, 44, 16); ">My Class Works</h2>
         <ul>
             <dt>
-                <p><a target="_self" href="https://eneskarali.github.io/automataLab/CW2/CW2.html">CW2
+                <p><a target="_self" href="https://eneskarali.github.io/automata/CW2/CW2.html">CW2
                         -
                         DFA-NFA-RegExp</a></p>
             </dt>
             <dt>
-                <p><a target="_self" href="https://eneskarali.github.io/automataLab/CW3/regEx.html">CW3 - Regular
+                <p><a target="_self" href="https://eneskarali.github.io/automata/CW3/regEx.html">CW3 - Regular
                         Expressions</a></p>
             </dt>
             <dt>
-                <p><a target="_self" href="https://eneskarali.github.io/automataLab/CW4/palindromes.html">CW4 - Context
+                <p><a target="_self" href="https://eneskarali.github.io/automata/CW4/palindromes.html">CW4 - Context
                         Free Grammar</a></p>
             </dt>
             <dt>
-                <p><a target="_self" href="https://eneskarali.github.io/automataLab/CW5/Expression.html">CW5
+                <p><a target="_self" href="https://eneskarali.github.io/automata/CW5/Expression.html">CW5
                         -
                         Expression Parser</a></p>
             </dt>
             <dt>
-                <p><a target="_self" href="https://eneskarali.github.io/automataLab/CW6/PDA.html">CW6
+                <p><a target="_self" href="https://eneskarali.github.io/automata/CW6/PDA.html">CW6
                         -
                         PDA</a></p>
             </dt>
             <dt>
-                <p><a target="_self" href="https://eneskarali.github.io/automataLab/CW7/microJ3.html">CW7
+                <p><a target="_self" href="https://eneskarali.github.io/automata/CW7/microJ3.html">CW7
                         -
                         MicroJ Prime Numbers Program</a></p>
             </dt>
@@ -110,21 +110,21 @@
 
         <ul>
             <dt>
-                <p><a target="_self" href="https://eneskarali.github.io/automataLab/HW1/hw1.html">HW1 -
+                <p><a target="_self" href="https://eneskarali.github.io/automata/HW1/hw1.html">HW1 -
                         Text Coloring with RegExp</a></p>
             </dt>
             <dt>
-                <p><a target="_self" href="https://eneskarali.github.io/automataLab/HW2/Expression.html">HW2 -
+                <p><a target="_self" href="https://eneskarali.github.io/automata/HW2/Expression.html">HW2 -
                         Math Functions Implementation</a></p>
             </dt>
             <dt>
-                <p><a target="_self" href="https://eneskarali.github.io/automataLab/HW3/microJ1.html">HW3 -
+                <p><a target="_self" href="https://eneskarali.github.io/automata/HW3/microJ1.html">HW3 -
                         MicroJ1 withValue Rule İmplementation</a></p>
             </dt>
         </ul>
        
         <p style="font-size: 20px;color:#345e44">Github: <a target="_blank"
-                href="https://github.com/eneskarali/automataLab">My Github Repo</a></p>
+                href="https://github.com/eneskarali/automata">My Github Repo</a></p>
 
     </div>
     </div>
